--- a/helm-charts/pihole/templates/service.yml
+++ b/helm-charts/pihole/templates/service.yml
@@ -26,7 +26,7 @@ metadata:
 spec:
   type: LoadBalancer
   # Use your requested static IP here
-  loadBalancerIP: 192.168.1.42
+#   loadBalancerIP: 192.168.1.42
   selector:
     {{- include "pihole.selectorLabels" . | nindent 4 }}
   ports:
