--- a/helm-charts/pihole/templates/service.yml
+++ b/helm-charts/pihole/templates/service.yml
@@ -20,13 +20,8 @@ kind: Service
 metadata:
   name: {{ include "pihole.fullname" . }}-dns
   namespace: {{ .Release.Namespace }}
-  annotations:
-    # Essential for MetalLB to use the same IP for TCP/UDP
-    metallb.universe.tf/allow-shared-ip: pihole-svc
 spec:
-  type: LoadBalancer
-  # Use your requested static IP here
-#   loadBalancerIP: 192.168.1.42
+  type: ClusterIP
   selector:
     {{- include "pihole.selectorLabels" . | nindent 4 }}
   ports:
