--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -9,13 +9,13 @@ timezone: Europe/Paris
 adminPassword: "CHANGE_ME_NOW"
 
 service:
-  web:
-    type: NodePort
-    port: 80
-    nodePort: 30080
   dns:
     type: LoadBalancer
-    loadBalancerIP: 192.168.1.100   # Pi-hole DNS IP
+    loadBalancerIP: 192.168.1.42
+  web:
+    type: LoadBalancer
+    loadBalancerIP: 192.168.1.42
+    port: 80
 
 
 persistence:
