--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -11,12 +11,11 @@ adminPassword: "CHANGE_ME_NOW"
 service:
   dns:
     type: LoadBalancer
-    loadBalancerIP: 192.168.1.42
+    loadBalancerIP: 192.168.1.42  # first IP from MetalLB pool
   web:
     type: LoadBalancer
-    loadBalancerIP: 192.168.1.42
+    loadBalancerIP: 192.168.1.43  # second IP from MetalLB pool
     port: 80
-
 
 persistence:
   enabled: true
