--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -11,11 +11,10 @@ adminPassword: "CHANGE_ME_NOW"
 service:
   dns:
     type: LoadBalancer
-    loadBalancerIP: 192.168.1.42  # first IP from MetalLB pool
+    loadBalancerIP: 192.168.1.43
   web:
     type: LoadBalancer
-    loadBalancerIP: 192.168.1.43  # second IP from MetalLB pool
-    port: 80
+    loadBalancerIP: 192.168.1.44
 
 persistence:
   enabled: true
