--- a/helm-charts/pihole/templates/pihole-deployment.yaml
+++ b/helm-charts/pihole/templates/pihole-deployment.yaml
@@ -26,7 +26,7 @@ spec:
           env:
             - name: TZ
               value: {{ .Values.timezone }}
-            - name: WEBPASSWORD
+            - name: FTLCONF_webserver_api_password
               value: {{ .Values.adminPassword }}
             - name: DNS1
               value: "unbound.pihole.svc.cluster.local#{{ .Values.unbound.port }}"
