--- a/pihole-ingress.yaml
+++ b/pihole-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: pihole
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /admin
 spec:
   rules:
   - host: pi.hole
