--- a/helm-charts/pihole/templates/unbound-configmap.yaml
+++ b/helm-charts/pihole/templates/unbound-configmap.yaml
@@ -1,22 +1,41 @@
-# templates/unbound-configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: unbound-config
-spec:
+  namespace: pihole
 data:
   unbound.conf: |
     server:
       interface: 0.0.0.0
-      port: {{ .Values.unbound.port }}
-      verbosity: 1
+      port: 5335
+
+      verbosity: 0
+
       do-ip4: yes
+      do-ip6: no
       do-udp: yes
       do-tcp: yes
-      do-ip6: no
-      hide-identity: yes
-      hide-version: yes
+
+      root-hints: /etc/unbound/root.hints
+
       harden-glue: yes
       harden-dnssec-stripped: yes
+      use-caps-for-id: yes
+
+      edns-buffer-size: 1232
       prefetch: yes
-      num-threads: 2
+      prefetch-key: yes
+
+      num-threads: 1
+
+      so-rcvbuf: 1m
+      so-sndbuf: 1m
+
+      hide-identity: yes
+      hide-version: yes
+
+      rrset-roundrobin: yes
+      minimal-responses: yes
+
+      cache-min-ttl: 300
+      cache-max-ttl: 86400
