--- a/pihole-ingress.yaml
+++ b/pihole-ingress.yaml
@@ -4,9 +4,9 @@ metadata:
   name: pihole-ingress
   namespace: pihole
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /admin
+    nginx.ingress.kubernetes.io/rewrite-target: /admin/
 spec:
+  ingressClassName: nginx
   rules:
   - host: pi.hole
     http:
