--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -13,6 +13,7 @@ service:
     type: LoadBalancer
     loadBalancerIP: 192.168.1.42
     port: 80
+    externalTrafficPolicy: Local
   dns:
     type: LoadBalancer
     loadBalancerIP: 192.168.1.44
